--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        applicationId = "com.android.sample"
+        applicationId = "<%= packageName %>"
         compileSdk = 33
         minSdk = 24
         targetSdk = 33
